@@ -285,6 +285,7 @@ if [expr [istarget "i*86-*-*"] || [istarget "x86_64-*-*"]] then {
     run_dump_test "intel-expr"
     run_dump_test "string-ok"
     run_list_test "string-bad" ""
+    run_list_test "reg-bad" ""
     run_list_test "space1" "-al"
     run_dump_test rept
     if [is_elf_format] then {
