@@ -1,0 +1,5 @@
+.*: Assembler messages:
+.*:2: Error: bad register name `%xxx'
+.*:3: Error: bad register name `%xxx'
+.*:4: Error: bad register name `%xxxxxxxxx'
+.*:5: Error: bad register name `%xxxxxxxxx'
