@@ -1,0 +1,5 @@
+	.text
+        lea (%xxx,%esi,1),%esi
+        lea (%esi,%xxx,1),%esi
+        lea (%xxxxxxxxx,%esi,1),%esi
+        lea (%esi,%xxxxxxxxx,1),%esi
