@@ -1,3 +1,9 @@
+2012-08-14  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR gas/14457
+	* config/tc-i386.c (i386_att_operand): Terminate register name
+	when reporting bad register.
+
 2012-08-14  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* config/tc-mmix.c (loc_asserts): New variable.
